// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coreUtils.js process sample_1.js simple 1`] = `
"import {aliasMethodLib1 as myAliasMethod1} from 'externalLib1';
import {constant1} from 'externalLib1';
import {methodLib1} from 'externalLib1';
import externalLib1 from 'externalLib1';
import {constant2} from 'externalLib2';
import externalLib2 from 'externalLib2';
var a1 = constant1;
methodLib1();
externalLib1();
myAliasMethod1();

var a2 = constant2;
var temp2 = externalLib2();"
`;

exports[`coreUtils.js process sample_1.js withGroupImport 1`] = `
"import externalLib1, { aliasMethodLib1 as myAliasMethod1, constant1, methodLib1 } from 'externalLib1';
import externalLib2, { constant2 } from 'externalLib2';
var a1 = constant1;
methodLib1();
externalLib1();
myAliasMethod1();

var a2 = constant2;
var temp2 = externalLib2();"
`;

exports[`coreUtils.js process sample_2.js simple 1`] = `
"import externalLib1, { aliasMethodLib1 as myAliasMethod1, constant1, methodLib1 } from 'externalLib1';
import externalLib2, { constant2 } from 'externalLib2';
var a1 = constant1;
methodLib1();
externalLib1();
myAliasMethod1();

var a2 = constant2;
var temp2 = externalLib2();"
`;

exports[`coreUtils.js process sample_2.js withGroupImport 1`] = `
"import externalLib1, { aliasMethodLib1 as myAliasMethod1, constant1, methodLib1 } from 'externalLib1';
import externalLib2, { constant2 } from 'externalLib2';
var a1 = constant1;
methodLib1();
externalLib1();
myAliasMethod1();

var a2 = constant2;
var temp2 = externalLib2();"
`;
